# CppND-Capstone

./: CMakeLists.txt  README.md
src/: fifo_work_queue.h  main.cpp  object_detector.cpp  object_detector.h  video_reader.cpp  video_reader.h
